# working_space

./: .gitignore
STM32F411VET/CUSTOM_LOADER_1/APPLICATION/: GPIO_HAL.uvguix.pvbinh  GPIO_HAL.uvoptx  GPIO_HAL.uvprojx  main.c
STM32F411VET/CUSTOM_LOADER_1/LOADER/: GPIO_HAL.uvguix.pvbinh  GPIO_HAL.uvprojx  main.c
STM32F411VET/GPIO_HAL/: GPIO_HAL.uvguix.pvbinh  GPIO_HAL.uvprojx  main.c  stm32f4xx_it.c
STM32F411VET/GPIO_HAL/Listings/: GPIO_HAL.map
STM32F411VET/GPIO_REGISTER/: GPIO_Register.uvguix.pvbinh  GPIO_Register.uvoptx  GPIO_Register.uvprojx
STM32F411VET/LOGIC_ANALYZER_PULSE/: GPIO_HAL.uvguix.pvbinh  main.c
STM32F411VET/LOGIC_ANALYZER_PULSE/Listings/: GPIO_HAL.map
algorithm/cph/: CMakeLists.txt
algorithm/cph/chap1/: CMakeLists.txt  code_template.cpp
algorithm/cph/chap1_introduction/: 01.code_template.cpp  02.input_output.cpp  CMakeLists.txt
algorithm/cph/chap1_introduction/config/: config.h.in
java_script/JavaScript_1_hour/: index.html  index.js
python/opencv/: readme.txt
qt/qt_game_course/: readme.txt
shell/: .case.sh.swp  .git_server_pull.sh.swp  accent_graves.sh  and.sh  append.sh  case.sh  check_number.sh  count.sh  count_number.sh  expr.sh  file_test.sh  fname  for.sh  for_test.sh  function.sh  function_return.sh  git_server_pull.sh  grep_test.txt  hello.sh  if_then.sh  ifs.sh  operator.sh  or.sh  parameter.sh  pinfo.sh  read.sh  readme.txt  real_num.sh  second.sh  sleep.sh  string_test.sh  test  test.pvbinh  test.sh  tput.sh  until.sh  util.sh  variable.sh  while.sh  word.sh
shell/count_file/: count_file.sh
(+475 files in other folders)
